Add finance and Meteo API

--- a/src/app/finance/finance.component.html
+++ b/src/app/finance/finance.component.html
@@ -1,3 +1,7 @@
 <div>
   <h2>Finance</h2>
+
+  <div class="card">
+    <p-chart type="line" [data]="data" [options]="options" class="h-[30rem]" />
+  </div>
 </div>
