backend / google API

--- a/src/app/linky/linky.component.html
+++ b/src/app/linky/linky.component.html
@@ -2,6 +2,6 @@
   <h2>Linky</h2>
 
   <div class="card">
-    <p-chart type="line" [data]="data" [options]="options" class="h-[30rem]" />
+    <p-chart type="bar" [data]="data" [options]="options" class="h-[30rem]" />
   </div>
 </div>
