--- a/frontend/src/app/google/calendar/calendar.component.html
+++ b/frontend/src/app/google/calendar/calendar.component.html
@@ -8,12 +8,9 @@
     </span>
   </ng-template>
   <ng-template #content let-event>
-    <p-card
-      [header]="event.status"
-      [subheader]="getDates(event)"
-    >
+    <p-card [header]="event.summary" [subheader]="getDates(event)">
       <p>
-        {{ event.summary }}
+        {{ event.location }}
       </p>
     </p-card>
   </ng-template>
