--- a/frontend/src/app/main/main.component.html
+++ b/frontend/src/app/main/main.component.html
@@ -1,7 +1,17 @@
 <div class="masonry">
-  <app-light-list></app-light-list>
-  <app-linky></app-linky>
-  <app-finance></app-finance>
-  <app-tram></app-tram>
-  <app-calendar></app-calendar>
+  <p-card header="Lumières">
+    <app-light-list></app-light-list>
+  </p-card>
+  <p-card header="Linky">
+    <app-linky></app-linky>
+  </p-card>
+  <p-card header="T4 (Archives Départementales)">
+    <app-tram></app-tram>
+  </p-card>
+  <p-card header="Finance">
+    <app-finance></app-finance>
+  </p-card>
+  <p-card header="Agenda">
+    <app-calendar></app-calendar>
+  </p-card>
 </div>
