--- a/frontend/src/app/tcl/tram/tram.component.html
+++ b/frontend/src/app/tcl/tram/tram.component.html
@@ -1,17 +1,17 @@
 <div>
   @for (traffic of traffic(); track idx; let idx = $index) {
-  <div>
-    <img src="assets/img/T4.svg" alt="TCL T4 Logo" class="tram-logo" />
-    {{ traffic.destination }}
+    <div>
+      <img src="assets/img/T4.svg" alt="TCL T4 Logo" class="tram-logo" />
+      {{ traffic.destination }}
 
-    @for (schedule of traffic.schedules; track idx; let idx = $index) { @let
-    minutes = schedule.dateTime | timeTo;
+      @for (schedule of traffic.schedules; track idx; let idx = $index) {
+        @let minutes = schedule.dateTime | timeTo;
 
-    <p>
-      <span class="pi pi-clock" [class.tram-0]="minutes === '0 min'"></span>
-      {{ minutes }}
-    </p>
-    }
-  </div>
+        <p>
+          <span class="pi pi-clock" [class.tram-0]="minutes === '0 min'"></span>
+          {{ minutes }}
+        </p>
+      }
+    </div>
   }
 </div>
