--- a/frontend/src/app/google/mail/mail.component.html
+++ b/frontend/src/app/google/mail/mail.component.html
@@ -1,4 +1,4 @@
-<p>
-  Nb :
+<a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer" class="mail-link">
+  <span class="pi pi-envelope"></span>
   {{ nbMails }}
-</p>
+</a>
